--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           <!-- NAVIGATION -->
           <ul class="nav-ul">
             <i class="fas fa-times close"></i>
-            <li><a href="" class="nav-link current">Home</a></li>
-            <li><a href="" class="nav-link">Services</a></li>
-            <li><a href="" class="nav-link">About</a></li>
+            <li><a href="#top" class="nav-link current">Home</a></li>
+            <li><a href="#services" class="nav-link">Services</a></li>
+            <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="" class="nav-link">Contact</a></li>
-            <li><a href="" class="nav-link">Blog</a></li>
+            <li><a href="" class="nav-link">Portfolio</a></li>
           </ul>
           <i class="fas fa-search search"></i>
         </nav>
@@ -42,8 +42,8 @@
       <section id="intro">
         <div class="container">
           <div class="intro-text line">
-            <h1>We're a digital agency.</h1>
-            <a href="#" class="btn btn-dark">Getting Started</a>
+            <h1>Transform every Digital Process.</h1>
+            <a href="#" class="btn btn-dark">Get A Quote</a>
           </div>
           <!-- CARDS -->
           <div class="intro-cards">
@@ -51,8 +51,8 @@
               <i class="fas fa-chart-bar"></i>
               <h3 class="line heading-3">Future Vision</h3>
               <p>
-                it is a long established fact that a reader will be distracted
-                by the readable content of a page.
+                To be the most reliable and supportive center
+                that empower business digitally in Tanzania.
               </p>
             </div>
             <!-- card 2 -->
@@ -69,8 +69,8 @@
               <i class="fas fa-chart-pie"></i>
               <h3 class="line heading-3">Great Solution</h3>
               <p>
-                The generated Lorem Ipsum is therefore always free from
-                repitition, injected humor.
+                Think of diversity of extensions among the files in your database -MP4,
+                DOC and more. The more extensions you see, the more varied your data.
               </p>
             </div>
           </div>
@@ -81,43 +81,43 @@
       <section id="services">
         <div class="container">
           <div class="heading line">
-            <h2>Services</h2>
+            <h2>Our Services</h2>
             <p>WE WORK WITH YOU, NOT FOR YOU</p>
           </div>
           <div class="services" data-aos="fade-up">
             <div class="service">
-              <i class="fas fa-bookmark"></i>
-              <h3>Digital Strategy</h3>
+              <i class="fa fa-code"></i>
+              <h3>Mobile Apps, Back end & API Development</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
             <!-- service 2 -->
             <div class="service">
-              <i class="fas fa-file-alt"></i>
-              <h3>UX Design</h3>
+              <i class="fa fa-cloud-upload"></i>
+              <h3>Cloud Infrastructure & Deployment</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
             <!-- service 3 -->
             <div class="service">
-              <i class="fas fa-edit"></i>
-              <h3>Product Design</h3>
+              <i class="fa fa-connectdevelop"></i>
+              <h3>POS System Installation</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
             <!-- Next three services section -->
             <div class="service">
-              <i class="fas fa-bookmark"></i>
-              <h3>Content Strategy</h3>
+              <i class="fa fa-server"></i>
+              <h3>Network Design & Installation</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
             <!-- service 2 -->
             <div class="service">
-              <i class="fas fa-file-alt"></i>
-              <h3>Brand Identity</h3>
+              <i class="fa fa-line-chart"></i>
+              <h3>Business Analysis & Digital Transformation</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
             <!-- service 3 -->
             <div class="service">
-              <i class="fas fa-edit"></i>
-              <h3>Media Planning</h3>
+              <i class="fa fa-location-arrow"></i>
+              <h3>Hardware Sales & Supply</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
           </div>
@@ -152,7 +152,7 @@
               <img src="./images/about_03.jpg" alt="" />
               <div class="image-text">
                 <h3 class="heading-3">Office</h3>
-                <p>Ikeja, Lagos</p>
+                <p>Dar es Salaam/p>
               </div>
             </div>
           </div>
@@ -161,18 +161,20 @@
             <div class="text1">
               <h3 class="heading-3">Who we are</h3>
               <p>
-                Bring to the table win-win survival strategies to ensure
-                proactive domination. At the end of the day, going forward will
-                have multiple touchpoints for offshoring.
+                We are a team of Full-stack developers. We create applications dedicated
+                for iOS and Android and develop mobile solutions for companies. We can
+                develop anything that comes to your mind <br>
+                <a href="#">Read more &#8594</a>
               </p>
             </div>
 
             <div class="text2">
-              <h3 class="heading-3">Our philosophy</h3>
+              <h3 class="heading-3">Our mission</h3>
               <p>
-                A new normal that has evolved from generation X is on the runway
-                heading towards a streamlined cloud solution. User generated
-                content in real-time.
+                To fully understand our customers' business processes and to deliver
+                significant added value to their customers by developing solutions that
+                dramatically reduce their costs and enhance their ability to adapt to
+                changes in their markets.
               </p>
             </div>
             <div class="text3">
@@ -202,25 +204,25 @@
               <img src="./images/tech1.jpg" alt="" />
               <div class="blog-text">
                 <p>CREATIVITY & INNOVATION</p>
-                <h3 class="heading-3">How to drive your customer experience</h3>
+                <h3 class="heading-3">Transform every digital process</h3>
                 <i class="fas fa-arrow-right"></i>
               </div>
             </div>
             <!-- blog item 2 -->
             <div class="blog-item image">
-              <img src="./images/01-min.jpg" alt="" />
+              <img src="./images/business.jpg" alt="" />
               <div class="blog-text">
-                <p>DESIGN/UX</p>
-                <h3 class="heading-3">How to drive your customer experience</h3>
+                <p>ENTHUSIASM</p>
+                <h3 class="heading-3">Run a more efficient business</h3>
                 <i class="fas fa-arrow-right"></i>
               </div>
             </div>
             <!-- blog item 3 -->
             <div class="blog-item image">
-              <img src="./images/04-min.jpg" alt="" />
+              <img src="./images/digitalShop.jpg" alt="" />
               <div class="blog-text">
-                <p>DESIGN/UX</p>
-                <h3 class="heading-3">How to drive your customer experience</h3>
+                <p>DIGITAL SHOP</p>
+                <h3 class="heading-3">Better drive your customer experience</h3>
                 <i class="fas fa-arrow-right"></i>
               </div>
             </div>
@@ -240,7 +242,7 @@
               <i class="fab fa-github"></i>
             </div>
             <!-- text -->
-            <h2>Let's Talk?</h2>
+            <h2>Don't Miss Any Opportunity !</h2>
 
             <!-- button -->
             <a href="#" class="btn btn-dark">Make an enquiry!</a>
@@ -251,7 +253,7 @@
 
     <footer>
       <div class="container">
-        <p>2022 &copy; Sky Inc Technologies. All Rights Reserved</p>
+        <p>&copy; 2022 Sky Inc Limited. All rights reserved</p>
       </div>
     </footer>
 
