--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#top" class="nav-link current">Home</a></li>
             <li><a href="#services" class="nav-link">Services</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
-            <li><a href="" class="nav-link">Contact</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
             <li><a href="" class="nav-link">Portfolio</a></li>
           </ul>
           <i class="fas fa-search search"></i>
@@ -60,8 +60,8 @@
               <i class="fas fa-rocket"></i>
               <h3 class="line heading-3">Product Design</h3>
               <p>
-                There are many variations of the passages of available, but the
-                majority alteration in some form.
+                We produce modular, fast and reliable software solutions with low
+                management and maintanance costs.
               </p>
             </div>
             <!-- card 3 -->
@@ -69,8 +69,8 @@
               <i class="fas fa-chart-pie"></i>
               <h3 class="line heading-3">Great Solution</h3>
               <p>
-                Think of diversity of extensions among the files in your database -MP4,
-                DOC and more. The more extensions you see, the more varied your data.
+                We build the future with our employees who say 'us' with our
+                team game.
               </p>
             </div>
           </div>
@@ -142,17 +142,17 @@
               </div>
             </div>
             <div class="image image2">
-              <img src="./images/tech2.jfif" alt="" />
+              <img src="./images/tech12.jfif" alt="" />
               <div class="image-text">
                 <h3 class="heading-3">Philosophy</h3>
                 <p>Trust Pays off</p>
               </div>
             </div>
             <div class="image image2">
-              <img src="./images/about_03.jpg" alt="" />
+              <img src="./images/telecom2.jfif" alt="" />
               <div class="image-text">
-                <h3 class="heading-3">Office</h3>
-                <p>Dar es Salaam/p>
+                <h3 class="heading-3">Site Maintanance & Installation</h3>
+                <p></p>
               </div>
             </div>
           </div>
@@ -178,11 +178,10 @@
               </p>
             </div>
             <div class="text3">
-              <h3 class="heading-3">How we work</h3>
+              <h3 class="heading-3">Value-oriented culture</h3>
               <p>
-                Capitalize on low hanging fruit to identify a ballpark value
-                added activity to beta test. Override the digital divide with
-                additional clickthroughs from DevOps.
+                We inspire not only the products we produce, but also the special
+                projets that come from our own world.
               </p>
             </div>
           </div>
@@ -222,7 +221,7 @@
               <img src="./images/digitalShop.jpg" alt="" />
               <div class="blog-text">
                 <p>DIGITAL SHOP</p>
-                <h3 class="heading-3">Better drive your customer experience</h3>
+                <h3 class="heading-3">Able to drive your customer experience</h3>
                 <i class="fas fa-arrow-right"></i>
               </div>
             </div>
@@ -239,7 +238,7 @@
               <i class="fab fa-whatsapp"><a href="https://api.whatsapp.com/send?phone=0713549623"></a></i>
               <i class="fab fa-twitter"></i>
               <i class="fab fa-instagram"></i>
-              <i class="fab fa-github"></i>
+              <i class="fab fa-linkedin"></i>
             </div>
             <!-- text -->
             <h2>Don't Miss Any Opportunity !</h2>
