--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <h3 class="line heading-3">Future Vision</h3>
               <p>
                 To be the most reliable and supportive center
-                that empower business digitally in Tanzania.
+                that empower business digitally in Africa.
               </p>
             </div>
             <!-- card 2 -->
@@ -202,7 +202,7 @@
             <div class="blog-item image">
               <img src="./images/tech1.jpg" alt="" />
               <div class="blog-text">
-                <p>CREATIVITY & INNOVATION</p>
+                <p>INTERNET OF THINGS (IoT)</p>
                 <h3 class="heading-3">Transform every digital process</h3>
                 <i class="fas fa-arrow-right"></i>
               </div>
