--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <!-- service 2 -->
             <div class="service">
               <i class="fa fa-cloud-upload"></i>
-              <h3>Cloud Infrastructure & Deployment</h3>
+              <h3>Cloud Infrastructure, Computing & Deployment</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
             <!-- service 3 -->
@@ -116,8 +116,24 @@
             </div>
             <!-- service 3 -->
             <div class="service">
-              <i class="fa fa-location-arrow"></i>
+              <i class="fa fa-desktop"></i>
               <h3>Hardware Sales & Supply</h3>
+              <i class="fas fa-arrow-right"></i>
+            </div>
+            <!-- Next three services section -->
+            <div class="service">
+              <i class="fa fa-life-ring"></i>
+              <h3>Technical Support Services</h3>
+              <i class="fas fa-arrow-right"></i>
+            </div>
+            <div class="service">
+              <i class="fa fa-code"></i>
+              <h3>Web Design & Development</h3>
+              <i class="fas fa-arrow-right"></i>
+            </div>
+            <div class="service">
+              <i class="fa fa-newspaper-o"></i>
+              <h3>Software Project Management</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
           </div>
@@ -164,7 +180,7 @@
                 We are a team of Full-stack developers. We create applications dedicated
                 for iOS and Android and develop mobile solutions for companies. We can
                 develop anything that comes to your mind <br>
-                <a href="#">Read more &#8594</a>
+                <a href="about.html" style="scroll-behavior: smooth;">Read more &#8594</a>
               </p>
             </div>
 
@@ -202,7 +218,7 @@
             <div class="blog-item image">
               <img src="./images/tech1.jpg" alt="" />
               <div class="blog-text">
-                <p>INTERNET OF THINGS (IoT)</p>
+                <p>IoT & DATA INTELLIGENCE</p>
                 <h3 class="heading-3">Transform every digital process</h3>
                 <i class="fas fa-arrow-right"></i>
               </div>
@@ -244,7 +260,7 @@
             <h2>Don't Miss Any Opportunity !</h2>
 
             <!-- button -->
-            <a href="#" class="btn btn-dark">Make an enquiry!</a>
+            <a href="#" class="btn btn-dark">Schedule a Call</a>
           </div>
         </div>
       </section>
