--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
     </header>
 
     <div class="container">
+      <h1 class="title">Who We are</h1>
       <div class="row">
         <div class="col-2">
             <h1>We help all our clients<br>reach success</h1>
