--- a/about.html
+++ b/about.html
@@ -67,6 +67,49 @@
       </div>
     </div>
 
+    <!-- Scroll-To-Top Button -->
+    <div id="go-top" class="fa fa-arrow-up"></div>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+
+    <script>
+
+      (function ($, window, document){
+        $.fn.goTop = function (options){
+          var defaults = {
+            scrollTop: 100,
+            scrollSpeed: 1000,
+            fadeInSpeed: 1000,
+            fadeOutSpeed: 500
+          };
+
+          var options = $.extend(defaults, options);
+          var $this = $(this);
+          $(window).on('scroll', function (){
+            if ($(window).scrollTop() > options.scrollTop){
+              $this.fadeIn(options.fadeInSpeed);
+            } else{
+              $this.fadeOut(options.fadeOutSpeed);
+            }
+          })
+          $this.on('click', function(){
+            $('html,body').animate({
+              'scrollTop': 0
+            }, options.speed)
+          })
+        }
+      })(jQuery, window, document)
+
+      $('#go-top').goTop({
+        scrollTop: 100,
+        scrollSpeed: 1000,
+        fadeInSpeed: 1000,
+        fadeOutSpeed: 500
+      })
+
+    </script>
+    <!-- End Button -->
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="script.js"></script>
   </body>
