--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="service">
               <i class="fa fa-code"></i>
               <h3>Mobile Apps, Back end & API Development</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service1.html" class="nav-link"><i class="fas fa-arrow-right"></i></a>
             </div>
             <!-- service 2 -->
             <div class="service">
@@ -181,7 +181,7 @@
                 We are a team of Full-stack developers. We create applications dedicated
                 for iOS and Android and develop mobile solutions for companies. We can
                 develop anything that comes to your mind <br>
-                <a href="about.html" style="scroll-behavior: smooth;">Read more &#8594</a>
+                <a href="about.html" style="scroll-behavior: smooth;" class="btn btn-dark">Read more &#8594;</a>
               </p>
             </div>
 
@@ -252,7 +252,7 @@
           <div class="contact">
             <!-- icons -->
             <div class="contact-icon">
-              <i class="fab fa-whatsapp"><a href="https://api.whatsapp.com/send?phone=0713549623"></a></i>
+              <a href="https://wa.me/0713549623"><i class="fab fa-whatsapp"></i></a>
               <i class="fab fa-twitter"></i>
               <i class="fab fa-instagram"></i>
               <i class="fab fa-linkedin"></i>
@@ -269,7 +269,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; 2022 Sky Inc Limited. All rights reserved</p>
+        <p>&copy; 2022 Developed by Sky Inc Limited. All rights reserved</p>
       </div>
     </footer>
 
