--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
           <ul class="nav-ul">
             <i class="fas fa-times close"></i>
             <li><a href="index.html" class="nav-link current" style="scroll-behavior: smooth;">Home</a></li>
-            <li><a href="service1.html" class="nav-link">Services</a></li>
+            <li><a href="index.html" class="nav-link">Services</a></li>
             <li><a href="#" class="nav-link">About</a></li>
-            <li><a href="#" class="nav-link">Contact</a></li>
+            <li><a href="contact.html" class="nav-link">Contact</a></li>
             <li><a href="" class="nav-link">Portfolio</a></li>
           </ul>
           <i class="fas fa-search search"></i>
@@ -76,7 +76,7 @@
           <h2>Don't Miss Any Opportunity !</h2>
 
           <!-- button -->
-          <a href="#" class="btn btn-dark">Schedule a Call</a>
+          <a href="contact.html" class="btn btn-dark">Schedule a Call</a>
         </div>
       </div>
     </section>
@@ -84,7 +84,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2022 Sky Inc Limited. All rights reserved</p>
+      <p>&copy; 2022 Developed by Sky Inc Limited. All rights reserved</p>
     </div>
   </footer>
 
