--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <h2>Don't Miss Any Opportunity !</h2>
 
             <!-- button -->
-            <a href="#" class="btn btn-dark">Schedule a Call</a>
+            <a href="contact.html" class="btn btn-dark">Schedule a Call</a>
           </div>
         </div>
       </section>
