--- a/service1.html
+++ b/service1.html
@@ -45,14 +45,14 @@
       <h1 class="title">Mobile Apps, Back end & API Development</h1>
       <div class="row">
         <div class="col-2">
-            <h1>Trusted Mobile App<br>Development Company</h1>
+            <h1>Trusted Mobile App Development Company</h1>
             <ul>
               <li>Benefit from the expertise of seasoned mobile app & back-end developers to build outstanding applications.</li>
               <li>Leverage constant communication and collaboration to stay updated on every step of custom mobile app development services outsourcing.</li>
               <li>Entirely at your disposal, your dedicated team is set to reach goals without distractions.</li>
             </ul>
             <br>
-            <a href="about.html" style="scroll-behavior: smooth;" class="btn2 btn2-dark">Discuss your Project</a>
+            <a href="contact.html" style="scroll-behavior: smooth;" class="btn2 btn2-dark">Discuss your Project</a>
         </div>
         <div class="col-2">
           <img src="./images/phone.png" alt="" />
@@ -94,7 +94,7 @@
 
     <footer>
         <div class="container">
-          <p>&copy; 2022 Sky Inc Limited. All rights reserved</p>
+          <p>&copy; 2022 Developed by Sky Inc Limited. All rights reserved</p>
         </div>
     </footer>
     
