--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       <h1 class="title">Who We are</h1>
       <div class="row">
         <div class="col-2">
-            <h1>We help all our clients<br>reach success</h1>
+            <h1>We help all our clients<br><span>reach success</span></h1>
             <p>The only thing holding your business back is not being able to find the right
             software development partner. Let us take your problem off your hands so you can
             focus on what really matters - running an efficient company as our model is applicable
@@ -67,7 +67,8 @@
         <div class="contact">
           <!-- icons -->
           <div class="contact-icon">
-            <i class="fab fa-whatsapp"><a href="https://api.whatsapp.com/send?phone=0713549623"></a></i>
+            <a href="https://wa.me/0713549623"><i class="fab fa-whatsapp"></i></a>
+            <i class="fab fa-github"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-instagram"></i>
             <i class="fab fa-linkedin"></i>
