--- a/contact2.html
+++ b/contact2.html
@@ -16,9 +16,9 @@
       <img src="./images/shape.png" class="square" alt="" />
       <div class="form">
         <div class="contact-info">
-          <h3 class="title">Let Us Know What You're Looking for,</h3>
+          <h3 class="title">Let's build something awesome together.</h3>
           <p class="text">
-            We'll Build it for You.
+            We would love to discuss your ideas and look foward to bring them to life!
           </p>
 
           <div class="info">
@@ -28,11 +28,11 @@
             </div>
             <div class="information">
               <img src="./images/email.png" class="icon" alt="" />
-              <p>sales@skyinc.co.tz</p>
+              <p>hello@skyinc.co.tz</p>
             </div>
             <div class="information">
               <img src="./images/phone2.png" class="icon" alt="" />
-              <p>+255 753 775 435</p>
+              <p>+255 672 510 609<br>+255 713 931 387</p>
             </div>
           </div>
 
@@ -63,7 +63,7 @@
           <span class="circle two"></span>
 
           <form action="index.html" autocomplete="off">
-            <h3 class="title">Talk to our Sales Team</h3>
+            <h3 class="title">Drop Us an Email</h3>
             <div class="input-container">
               <input type="text" name="name" class="input" />
               <label for="">Username</label>
@@ -84,7 +84,7 @@
               <label for="">Message</label>
               <span>Message</span>
             </div>
-            <a href="mailto:sales@skyinc.co.tz"><input type="submit" value="Send" class="btn" /></a>
+            <a href="mailto:hello@skyinc.co.tz"><input type="submit" value="Send" class="btn" /></a>
           </form>
         </div>
       </div>
