--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             </div>
             <!-- service 3 -->
             <div class="service">
-              <i class="fa fa-connectdevelop"></i>
-              <h3>POS System Installation</h3>
+              <i class="fa fa-code"></i>
+              <h3>Web Design & Development</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
             <!-- Next three services section -->
@@ -128,8 +128,8 @@
               <i class="fas fa-arrow-right"></i>
             </div>
             <div class="service">
-              <i class="fa fa-code"></i>
-              <h3>Web Design & Development</h3>
+              <i class="fa fa-connectdevelop"></i>
+              <h3>POS System Installation</h3>
               <i class="fas fa-arrow-right"></i>
             </div>
             <div class="service">
@@ -161,14 +161,14 @@
             <div class="image image2">
               <img src="./images/tech12.jfif" alt="" />
               <div class="image-text">
-                <h3 class="heading-3">Philosophy</h3>
+                <h3 class="heading-4">Philosophy</h3>
                 <p>Trust Pays off</p>
               </div>
             </div>
             <div class="image image2">
               <img src="./images/telecom2.jfif" alt="" />
               <div class="image-text">
-                <h3 class="heading-3">Site Maintanance & Installation</h3>
+                <h3 class="heading-4">Site Maintanance & Installation</h3>
                 <p></p>
               </div>
             </div>
@@ -253,6 +253,7 @@
             <!-- icons -->
             <div class="contact-icon">
               <a href="https://wa.me/0713549623"><i class="fab fa-whatsapp"></i></a>
+              <i class="fab fa-github"></i>
               <i class="fab fa-twitter"></i>
               <i class="fab fa-instagram"></i>
               <i class="fab fa-linkedin"></i>
