--- a/service1.html
+++ b/service1.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="media-queries.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   </head>
 
   <body>
@@ -42,52 +41,49 @@
 
     <!--Service 1-->
     <div class="container">
-      <h1 class="title">Mobile Apps, Back end & API Development</h1>
+      <h1 class="title">Mobile Apps Development</h1>
       <div class="row">
         <div class="col-2">
-            <h1>Trusted Mobile App Development Company</h1>
+            <h1>Trusted <span>Mobile App</span> Development Company</h1>
             <ul>
               <li>Benefit from the expertise of seasoned mobile app & back-end developers to build outstanding applications.</li>
               <li>Leverage constant communication and collaboration to stay updated on every step of custom mobile app development services outsourcing.</li>
               <li>Entirely at your disposal, your dedicated team is set to reach goals without distractions.</li>
             </ul>
             <br>
-            <a href="contact.html" style="scroll-behavior: smooth;" class="btn2 btn2-dark">Discuss your Project</a>
+            <a href="contact2.html" style="scroll-behavior: smooth;" class="btn2 btn2-dark">Discuss your Project</a>
         </div>
         <div class="col-2">
           <img src="./images/phone.png" alt="" />
         </div>
+        <div class="col-2">
+          <h1>Payment <span>Integration</span> Patners</h1>
+          <p style="font-size: 1.8rem;">We make it easy for companies to integrate to the most famous payment systems in Africa and the World at large.</p>
+        </div>
+        <div class="col-2">
+          <img src="./images/payment.PNG" alt="" />
+        </div>
       </div>
     </div>
-    <div class="container">
-      <h1 class="title">Technologies</h1>
-      <section class="brand-logos slider">
-        <div class="slick-slide"><img src="./images/vue.png" alt=""></div>
-        <div class="slick-slide"><img src="./images/flutter.png" alt=""></div>
-        <div class="slick-slide"><img src="./images/kotlin.jfif" alt=""></div>
-        <div class="slick-slide"><img src="./images/react.png" alt=""></div>
-        <div class="slick-slide"><img src="./images/angular.png" alt=""></div>
-        <div class="slick-slide"><img src="./images/laravel.png" alt=""></div>
-        <div class="slick-slide"><img src="./images/python.jfif" alt=""></div>
-      </section>
-    </div>
 
+    
     <!-- contact section -->
     <section id="contact">
         <div class="container">
           <div class="contact">
             <!-- icons -->
             <div class="contact-icon">
-              <i class="fab fa-whatsapp"><a href="https://api.whatsapp.com/send?phone=0713549623"></a></i>
+              <a href="https://wa.me/0713549623"><i class="fab fa-whatsapp"></i></a>
+              <i class="fab fa-github"></i>
               <i class="fab fa-twitter"></i>
               <i class="fab fa-instagram"></i>
               <i class="fab fa-linkedin"></i>
             </div>
             <!-- text -->
-            <h2>Don't Miss Any Opportunity !</h2>
+            <h2>Curious about our services?</h2>
   
             <!-- button -->
-            <a href="#" class="btn btn-dark">Schedule a Call</a>
+            <a href="contact.html" class="btn btn-dark">Check Out Portfolio</a>
           </div>
         </div>
     </section>
@@ -151,33 +147,6 @@
     </script>
     <!-- End Button -->
 
-    <!--Slider-->
-    <script>
-
-      $(document).ready(function(){
-        $('.brand-logos').slick({
-          slidesToShow: 6,
-          slidesToScroll: 1,
-          autoplay: true,
-          autoplaySpeed: 1500,
-          arrows: false,
-          dots: false,
-          pauseOnHover: false,
-          responsive: [{
-            breakpoint: 768,
-            setting: {
-              slidesToShow: 4
-            }
-          }, {
-            breakpoint: 520,
-            setting: {
-              slidesToShow: 3
-            }
-          }]
-        });
-      });
-      
-    </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="script.js"></script>
 
