--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sky Inc</title>
+    <title>AVATECIAL</title>
     <script
       src="https://kit.fontawesome.com/1935d064dd.js"
       crossorigin="anonymous"
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-2">
             <h1>We help all our clients<br><span>reach success</span></h1>
-            <p>The only thing holding your business back is not being able to find the right
+            <p style="font-size: 1.8rem; color: #555;">The only thing holding your business back is not being able to find the right
             software development partner. Let us take your problem off your hands so you can
             focus on what really matters - running an efficient company as our model is applicable
             to different clients and have a goal to make all works as efficient as possible.
@@ -85,7 +85,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2022 Developed by Sky Inc Limited. All rights reserved</p>
+      <p>&copy; 2022 Developed by AVATECIAL. All rights reserved</p>
     </div>
   </footer>
 
