--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sky Inc</title>
+    <title>AVATECIAL</title>
     <script
       src="https://kit.fontawesome.com/1935d064dd.js"
       crossorigin="anonymous"
@@ -95,47 +95,47 @@
             <div class="service">
               <i class="fa fa-cloud-upload"></i>
               <h3>Cloud Infrastructure, Computing & Deployment</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service2.html" class="nav-link"><i class="fas fa-arrow-right"></i></a>
             </div>
             <!-- service 3 -->
             <div class="service">
               <i class="fa fa-code"></i>
               <h3>Web Design & Development</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service3.html"><i class="fas fa-arrow-right"></i></a>
             </div>
             <!-- Next three services section -->
             <div class="service">
               <i class="fa fa-server"></i>
               <h3>Network Design & Installation</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service4.html"><i class="fas fa-arrow-right"></i></a>
             </div>
             <!-- service 2 -->
             <div class="service">
               <i class="fa fa-line-chart"></i>
               <h3>Business Analysis & Digital Transformation</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service5.html"><i class="fas fa-arrow-right"></i></a>
             </div>
             <!-- service 3 -->
             <div class="service">
               <i class="fa fa-desktop"></i>
               <h3>Hardware Sales & Supply</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service6.html"><i class="fas fa-arrow-right"></i></a>
             </div>
             <!-- Next three services section -->
             <div class="service">
               <i class="fa fa-life-ring"></i>
               <h3>Technical Support Services</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service7.html"><i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="service">
               <i class="fa fa-connectdevelop"></i>
               <h3>POS System Installation</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service8.html"><i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="service">
               <i class="fa fa-newspaper-o"></i>
               <h3>Software Project Management</h3>
-              <i class="fas fa-arrow-right"></i>
+              <a href="service9.html"><i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -226,9 +226,9 @@
             </div>
             <!-- blog item 2 -->
             <div class="blog-item image">
-              <img src="./images/business.jpg" alt="" />
+              <img src="./images/POS.jpg" alt="" />
               <div class="blog-text">
-                <p>ENTHUSIASM</p>
+                <p>POS SYSTEM</p>
                 <h3 class="heading-3">Run a more efficient business</h3>
                 <i class="fas fa-arrow-right"></i>
               </div>
@@ -252,7 +252,7 @@
           <div class="contact">
             <!-- icons -->
             <div class="contact-icon">
-              <a href="https://wa.me/0713549623"><i class="fab fa-whatsapp"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=0713549623"><i class="fab fa-whatsapp"></i></a>
               <i class="fab fa-github"></i>
               <i class="fab fa-twitter"></i>
               <i class="fab fa-instagram"></i>
@@ -270,7 +270,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; 2022 Developed by Sky Inc Limited. All rights reserved</p>
+        <p>&copy; 2022 Developed by AVATECIAL. All rights reserved</p>
       </div>
     </footer>
 
@@ -278,8 +278,8 @@
       <span class="close-modal">&times;</span>
       <div class="modal-content">
         <form action="">
-          <input type="text" placeholder="Search" />
-          <i class="fas fa-search search"></i>
+            <input type="text" placeholder="Search" />
+            <i class="fas fa-search search"></i>
         </form>
       </div>
     </div>
