--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sky Inc</title>
+    <title>AVATECIAL</title>
     <link rel="stylesheet" href="style2.css" />
+    
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
