--- a/service1.html
+++ b/service1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sky Inc</title>
+    <title>AVATECIAL</title>
     <script
       src="https://kit.fontawesome.com/1935d064dd.js"
       crossorigin="anonymous"
@@ -57,16 +57,15 @@
           <img src="./images/phone.png" alt="" />
         </div>
         <div class="col-2">
-          <h1>Payment <span>Integration</span> Patners</h1>
-          <p style="font-size: 1.8rem;">We make it easy for companies to integrate to the most famous payment systems in Africa and the World at large.</p>
+          <img src="./images/payment.PNG" alt="" />
         </div>
         <div class="col-2">
-          <img src="./images/payment.PNG" alt="" />
+          <h1>Payment <span>Integration</span> Patners</h1>
+          <p style="font-size: 1.8rem; color: #555;">We make it easy for companies to integrate to the most famous payment systems in Africa and the World at large.</p>
         </div>
       </div>
     </div>
 
-    
     <!-- contact section -->
     <section id="contact">
         <div class="container">
@@ -90,7 +89,7 @@
 
     <footer>
         <div class="container">
-          <p>&copy; 2022 Developed by Sky Inc Limited. All rights reserved</p>
+          <p>&copy; 2022 Developed by AVATECIAL. All rights reserved</p>
         </div>
     </footer>
     
